--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "client"
+    }
+  },
+  "defaultProject": "client",
+  "cli": {
+    "analytics": "d0107dd3-aaac-4ef3-b747-0e50423fcb95"
+  }
 }
